fixed code to complete game

--- a/racinggame.html
+++ b/racinggame.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 
-	<script
+<script
  src="https://code.jquery.com/jquery-3.3.1.min.js"
  integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
  crossorigin="anonymous"></script>
@@ -11,16 +11,15 @@
 <script type="text/javascript" src = "js/app.js"></script>
 
 
+<title>Racing Game</title>
 
-	<title>Racing Game</title>
-	<h1>Racing Game</h1>
+<h1>Racing Game</h1>
+
 </head>
-<body>
 
-	<div id = "box" >
-	</div>
-	<div id = "box1"> 
-	</div>
-	
+<body>
+		<div id = "box1" ></div>
+		<div id = "box2"></div>
+
 </body>
 </html>
