--- a/racinggame.html
+++ b/racinggame.html
@@ -11,15 +11,15 @@
 <script type="text/javascript" src = "js/app.js"></script>
 
 
-<title>Racing Game</title>
+<title>Burger Race</title>
 
-<h1>Racing Game</h1>
+<h1>Burger</h1>
 
 </head>
 
 <body>
-		<div id = "box1" ></div>
-		<div id = "box2"></div>
+		<div id = "box1" ><img src = "imgs/louise.png"></div>
+		<div id = "box2"><img src ="imgs/gene.png"></div>
 
 </body>
 </html>
