fixed stuff! but not working exactly how I want it :(

--- a/racinggame.html
+++ b/racinggame.html
@@ -13,11 +13,13 @@
 
 <title>Burger Race</title>
 
-<h1>Burger</h1>
+
 
 </head>
 
 <body>
+
+	<img src="imgs/bobsburger.jpg">
 		<div id = "box1" ><img src = "imgs/louise.png"></div>
 		<div id = "box2"><img src ="imgs/gene.png"></div>
 
