--- a/bobburgergame.html
+++ b/bobburgergame.html
@@ -7,8 +7,8 @@
  integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
  crossorigin="anonymous"></script>
 
-<link rel = "stylesheet" href = "css/game.css">
-<script type="text/javascript" src = "js/app.js"></script>
+<link rel = "stylesheet" href = "css/bob.css">
+<script type="text/javascript" src = "js/bob.js"></script>
 
 
 <title>Burger Race</title>
